Add name and email into storage local. Apply changes popup into form main

--- a/html/popup.html
+++ b/html/popup.html
@@ -8,7 +8,7 @@
     <body>
         <h1 class="text-center">Atrapalo Flights Cart <span id="version"></span></h1>
         <div id="container" class="fluid-container">
-            <form>
+            <form id="users">
                 <div class="form-group">
                     <label for="name">Nombre</label>
                     <input type="text" class="form-control" id="name" placeholder="Nombre">
