--- a/html/popup.html
+++ b/html/popup.html
@@ -8,7 +8,17 @@
     <body>
         <h1 class="text-center">Atrapalo Flights Cart <span id="version"></span></h1>
         <div id="container" class="fluid-container">
-            <form id="users">
+            <div>
+                <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="radio" name="gender" id="male" value="mr"> Sr
+                    </label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="radio" name="gender" id="female" value="mrs"> Sra
+                    </label>
+                </div>
                 <div class="form-group">
                     <label for="name">Nombre</label>
                     <input type="text" class="form-control" id="name" placeholder="Nombre">
@@ -17,9 +27,8 @@
                     <label for="email">Email</label>
                     <input type="email" class="form-control" id="email" placeholder="Email">
                 </div>
-
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+                <div id="submit" class="btn btn-primary">Submit</div>
+            </div>
         </div>
         <script src="../js/lib/jquery.js"></script>
         <script src="../js/lib/popper.min.js"></script>
