--- a/html/popup.html
+++ b/html/popup.html
@@ -11,7 +11,7 @@
             <div>
                 <div class="form-check form-check-inline">
                     <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="gender" id="male" value="mr"> Sr
+                        <input class="form-check-input" type="radio" name="gender" id="male" value="mr" checked> Sr
                     </label>
                 </div>
                 <div class="form-check form-check-inline">
