--- a/html/popup.html
+++ b/html/popup.html
@@ -9,23 +9,29 @@
         <h1 class="text-center">Atrapalo Flights Cart <span id="version"></span></h1>
         <div id="container" class="fluid-container">
             <div>
-                <div class="form-check form-check-inline">
-                    <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="gender" id="male" value="mr" checked> Sr
-                    </label>
+                <div id="gender">
+                    <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="radio" name="gender" id="male" value="mr" checked> Sr
+                        </label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="radio" name="gender" id="female" value="mrs"> Sra
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check form-check-inline">
-                    <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="gender" id="female" value="mrs"> Sra
-                    </label>
+                <div class="form-group row">
+                    <label for="name" class="col-3 col-form-label">Nombre</label>
+                    <div class="col-9">
+                        <input class="form-control" type="text" id="name" placeholder="Nombre">
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="name">Nombre</label>
-                    <input type="text" class="form-control" id="name" placeholder="Nombre">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email">
+                <div class="form-group row">
+                    <label for="email" class="col-3 col-form-label">Email</label>
+                    <div class="col-9">
+                        <input class="form-control" type="email" id="email" placeholder="Email">
+                    </div>
                 </div>
                 <div id="submit" class="btn btn-primary">Submit</div>
             </div>
