checkbox active autofill or not

--- a/html/popup.html
+++ b/html/popup.html
@@ -33,6 +33,14 @@
                         <input class="form-control" type="email" id="email" placeholder="Email">
                     </div>
                 </div>
+                <div id="active">
+                    <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                            <input type="checkbox" id="active-autofill" class="form-check-input" name="active-autofill" />
+                            Active autofill cart page
+                        </label>
+                    </div>
+                </div>
                 <div id="submit" class="btn btn-primary">Submit</div>
             </div>
         </div>
